<resources>
    <string name="app_name" translatable="false">TODO App</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="remember_me_message">Remember me</string>
    <string name="sign_up_message">"Don\'t have an account ? "</string>
    <string name="sign_up_link">Sign up</string>
    <string name="login_message">"Already have an account ? "</string>
    <string name="login_link">Login</string>
    <string name="invalid_credential_email_message">Invalid Email</string>
    <string name="invalid_credential_password_message">Invalid Password</string>
    <string name="login_successful_message">Logged in successfully</string>
    <string name="signup">Sign up</string>
    <string name="empty_fields_message">Please enter all the fields</string>
    <string name="invalid_email_message">Invalid email address</string>
    <string name="email_already_exists_message">Email already exists</string>
    <string name="passwords_do_not_match_message">Passwords do not match</string>
    <string name="signup_successful_message">Signup Successful</string>
    <string name="signup_failed_message">Sign up failed</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="add_task_hint">Add a new task</string>
    <string name="edit_task_hint">Edit task</string>
    <string name="add_task_button_text">Add</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="edit_task_button_text">Edit</string>
    <string name="logout">Logout</string>
    <string name="welcome_message" translatable="false">T-O-D-O!</string>
    <string name="confirm_logout_message">Are you sure you want to logout ?</string>
    <string name="positive_choice">Yes</string>
    <string name="negative_choice">No</string>
    <string name="confirm_logout_action">Logged out</string>
    <string name="edit_task_dialog_title">Edit Task</string>
    <string name="confirm_edit_task_message">Are you sure you want to edit this task ?</string>
    <string name="confirm_task_edit">Task Updated</string>
    <string name="delete_task_dialog_title">Delete Task</string>
    <string name="confirm_delete_task_message">Are you sure you want to delete this task ?</string>
    <string name="confirm_task_deletion">Task deleted</string>
    <string name="no_internet_connection_message">No internet connection | Notification not sent</string>
    <string name="sending_email_dialog">Sending Email</string>
    <string name="please_wait_dialog">Please wait…</string>
    <string name="email_sent_confirmation">Email sent</string>
    <string name="new_task_email_subject">New task added</string>
    <string name="new_task_email_body">A new task has been added to your TODO list</string>
    <string name="task_updated_email_subject">Task Updated</string>
    <string name="task_updated_email_body">A task has been edited in your TODO list</string>
    <string name="task_deleted_email_subject">Task Deleted</string>
    <string name="task_deleted_email_body">A task has been deleted from your TODO list</string>
</resources>