<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="207dp"
        android:layout_height="237dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />


    <EditText
        android:id="@+id/email_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        android:textColorHint="@color/light_white"
        android:textColor="@color/white"
        android:autofillHints="emailAddress"
        />

    <EditText
        android:id="@+id/password1_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/email_input"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:fontFamily="@font/architects_daughter"
        android:background="@drawable/edittext_bg"
        android:textSize="20sp"
        android:textColorHint="@color/light_white"
        android:textColor="@color/white"
        android:autofillHints="password"
        />

    <EditText
        android:id="@+id/password2_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/password1_input"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:fontFamily="@font/architects_daughter"
        android:background="@drawable/edittext_bg"
        android:textSize="20sp"
        android:textColorHint="@color/light_white"
        android:textColor="@color/white"
        android:autofillHints="password"
        />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2_input"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/login_message"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2_input"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/login_message"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/login_link"
        android:textColor="@color/light_blue"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="90dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:strokeColor="@color/light_white"
        app:strokeWidth="2dp" />

</RelativeLayout>