<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="207dp"
        android:layout_height="237dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />


    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/architects_daughter"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="120dp"
        android:paddingVertical="10dp"
        android:textSize="20sp"
        android:textColorHint="@color/light_white"
        android:textColor="@color/white"
        android:autofillHints="username"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingStart="10dp"
        android:paddingEnd="120dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/username_input"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:fontFamily="@font/architects_daughter"
        android:background="@drawable/rounded_edittext"
        android:textSize="20sp"
        android:textColorHint="@color/light_white"
        android:textColor="@color/white"
        android:autofillHints="password"
        />

    <TextView
        android:id="@+id/signUpMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/sign_up_message"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/signUpMessage"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/sign_up_link"
        android:textColor="@color/light_blue"
        android:textSize="16sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpMessage"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="100dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>